# volume_renderer

./: .gitignore  CMakeLists.txt  README.md
3rdLibs/glad/include/glad/: glad.h
3rdLibs/glad/src/: glad.c
include/: bbox.hpp  camera.hpp  classifier.hpp  config.hpp  constant.hpp  film.hpp  gui.hpp  implicit_geom.hpp  interpolator.hpp  light.hpp  main_scene.hpp  optics_data.hpp  ray.hpp  render_output.hpp  res_manager.hpp  tinycolormap_cuda.hpp  utils.hpp  volume_renderer.hpp  voxel.hpp
src/: bbox.cu  camera.cu  classifier.cu  config.cu  film.cu  gui.cpp  implicit_geom.cu  interpolator.cu  light.cu  main.cu  main_scene.cu  res_manager.cpp  utils.cu  volume_renderer.cu  voxel.cu
tools/: slices2vol.py
